[gd_scene load_steps=7 format=2]

[ext_resource path="res://4x/Asset 11@4x.png" type="Texture" id=1]
[ext_resource path="res://Spawn.tscn" type="PackedScene" id=2]
[ext_resource path="res://PresentSpawn.tscn" type="PackedScene" id=3]
[ext_resource path="res://LaneEnd.tscn" type="PackedScene" id=4]
[ext_resource path="res://Lane.gd" type="Script" id=5]
[ext_resource path="res://NPC.tscn" type="PackedScene" id=6]

[node name="Lane" type="Node2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -800, 0 )
texture = ExtResource( 1 )
centered = false

[node name="LaneRight" type="Position2D" parent="."]
position = Vector2( 800, 0 )

[node name="PresentSpawn" parent="LaneRight" instance=ExtResource( 3 )]
position = Vector2( -30, 0 )

[node name="LaneRightEnd" parent="LaneRight" instance=ExtResource( 4 )]
collision_layer = 32
collision_mask = 76

[node name="LaneLeft" type="Position2D" parent="."]
show_behind_parent = true

[node name="NPCSpawn" parent="LaneLeft" instance=ExtResource( 2 )]
show_behind_parent = true
position = Vector2( 100, 0 )
spawnling_scene = ExtResource( 6 )

[node name="LaneLeftEnd" parent="LaneLeft" instance=ExtResource( 4 )]
collision_layer = 16
collision_mask = 72

[editable path="LaneRight/LaneRightEnd"]
[editable path="LaneLeft/LaneLeftEnd"]
